--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
 :root {  
   --brand-color: #0072b0;  
   --column-width: 1080px;  
-  }  
+}  
 
-
+/* Aplicar box-sizing universalmente */
+*, ::before, ::after {
+  box-sizing: border-box;
+}
 
 body {
   margin: unset;
@@ -16,28 +19,30 @@ body {
   margin: 0 auto;
 }
 
-
-.page-header{
+.page-header {
   color: #fff;
   background-color: var(--brand-color);
 }
 
 .page-header h1 {  
-max-inline-size: var(--column-width); /*A*/  
-margin-inline: auto; /*B*/  
+  max-inline-size: var(--column-width);  
+  margin-inline: auto;  
+  padding-inline: 1.5rem; /* Certifique-se de que este valor seja consistente */
 }  
 
 .container {  
-max-inline-size: var(--column-width); /*A*/  
-margin-inline: auto; /*B*/  
+  max-inline-size: var(--column-width);  
+  margin-inline: auto;  
 }  
 
 .main {
+  padding-inline: 1.5em;
   background-color: #fff;
   border-radius: 0.5em;
 }
 
 .social-links {
+  padding-inline: 1.5em;
   background-color: #fff;
   border-radius: 0.5em;
 }
