--- a/styles.css
+++ b/styles.css
@@ -1,64 +1,64 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
+* ,
+::before, ::after {
+box-sizing: border-box; 
 }
 
-:root {  
-  --brand-color: #0072b0;  
-  --column-width: 1080px;  
-  }
+:root {
+  --gap-size: 1.5em
+}
 
 body {
-  margin: unset;
-  background-color: #eee;
-  font-family: Helvetica, Arial, sans-serif;
+margin: unset;
+background-color: #709b90;
+font-family: Helvetica, Arial, sans-serif;
 }
 
-.navbar {  
-  max-width: var(--column-width);
-  margin: 0 auto;
+.site-nav{
+  display: flex;
+  gap: var(--gap-size);
+  padding: 0.5rem;
+  list-style-type: none; /* tira os estilos e topicos da lista */
+  background-color: #5f4b44;
 }
 
-
-.page-header{
-  color: #fff;
-  background-color: var(--brand-color);
+.site-nav > .nav-right {
+  margin-inline-start: auto;
 }
 
-.page-header h1 {  
-max-inline-size: var(--column-width); /*A*/  
-margin-inline: auto; /*B*/  
-}  
+.site-nav > li > a{
+  display:block;
+  padding: 0.5em 1em;
+  background-color: #cc6b5a;
+  color: white;
+  text-decoration: none;
+  gap: space-between;
+}
 
-.container {  
-max-inline-size: var(--column-width); /*A*/  
-margin-inline: auto; /*B*/  
-}  
+.column-main {
+flex:2;
+}
 
-.main {
+.column-sidebar{
+flex:1;
+
+}
+
+.stack * + * {
+  margin-block-start: 1.5em; 
+};
+
+.container {
+  max-inline-size: 1080px;
+  margin-inline: auto;
+}
+
+.tile{
+  padding:1.5em;
   background-color: #fff;
-  border-radius: 0.5em;
 }
 
-.button-link {
-  display: block;
-  padding: 0.5em;
-  color: #fff;
-  background-color: var(--brand-color);
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-}
+.flex{
+  display:flex;
+  gap: var(--gap-size);
 
-.sponsor-link {
-  display: block;
-  color: var(--brand-color);
-  font-weight: bold;
-  text-decoration: none;
-  
-}
-
-.stack > * + * {
-  margin-block-start: 1.5em
 }
